--- a/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
@@ -1,22 +1,22 @@
-<div class="invoice-container">
+<div class="purchase-order-container">
     <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
         <li class="last">Invoice</li>
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Invoices
+            Invoice
         </span>
 
-        <div class="submission-actions">
-            <button matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission"
+        <div class="purchase-order-actions">
+            <button matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-purchase-order"
                 (click)="addInvoice()">
                 <mat-icon class="item-icon">add_circle</mat-icon>
             </button>
-
+<!-- 
             <div class="search-submission">
-                <input matInput type="text" class="search" placeholder="search invoice" (keyup)="applyFilter($event)">
-            </div>
+                <input matInput type="text" class="search" placeholder="search purchase order">
+            </div> -->
         </div>
     </div>
     <div id="table-container" class="table-wrapper">
@@ -25,72 +25,72 @@
                 <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
 
-                <!-- Serial Number Column -->
                 <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef> # </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
+                <!-- Bill To Vendor Column -->
+                <ng-container matColumnDef="invoicenumber">
+                    <th mat-header-cell *matHeaderCellDef>Invoice Number</th>
+                    <td mat-cell *matCellDef="let element"> {{element.invoicenumber}} </td>
+                </ng-container>
+
                 <!-- Invoice Date Column -->
                 <ng-container matColumnDef="InvoiceDate">
                     <th mat-header-cell *matHeaderCellDef>Invoice Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.invoicenumber}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.invoicedate}} </td>
                 </ng-container>
+
+
 
                 <!-- Due Date Column -->
                 <ng-container matColumnDef="DueDate">
                     <th mat-header-cell *matHeaderCellDef>Due Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.duedate}} </td>
                 </ng-container>
 
-                <!-- Bill To Vendor Column -->
-                <ng-container matColumnDef="BillToVendor">
-                    <th mat-header-cell *matHeaderCellDef>Bill To Vendor</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
-                </ng-container>
+
 
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
                     <th mat-header-cell *matHeaderCellDef>Consultant</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.consultantname}} </td>
                 </ng-container>
 
                 <!-- Net Term Column -->
                 <ng-container matColumnDef="NetTerm">
                     <th mat-header-cell *matHeaderCellDef>NetTerm</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.netterm}} </td>
                 </ng-container>
 
                 <!-- Number Of Hours Column -->
                 <ng-container matColumnDef="NoOfHours">
                     <th mat-header-cell *matHeaderCellDef>No. Of Hours</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.numberofhours}} </td>
                 </ng-container>
 
                 <!-- Rate Column -->
                 <ng-container matColumnDef="Rate">
                     <th mat-header-cell *matHeaderCellDef>Rate</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.hourlyrate}} </td>
                 </ng-container>
 
                 <!-- Invoice Value Column -->
                 <ng-container matColumnDef="InvoiceValue">
                     <th mat-header-cell *matHeaderCellDef>Invoice Value</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.invoicevalue}} </td>
                 </ng-container>
 
                 <!-- Status Column -->
                 <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
                 </ng-container>
 
                 <!-- Action Column -->
-                <ng-container matColumnDef="Action">
+                <ng-container matColumnDef="Action" class="actions">
                     <th mat-header-cell *matHeaderCellDef>Action</th>
-                    <!-- 
-                    <td mat-cell *matCellDef="let element"> {{element.company}} </td>
-                    <th mat-header-cell *matHeaderCellDef> Action </th> -->
                     <td mat-cell *matCellDef="let element" class="action-buttons">
                         <button mat-icon-button (click)="editInvoice(element)" class="action-button-ed">
                             <mat-icon>edit</mat-icon>
@@ -99,10 +99,7 @@
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
-
                 </ng-container>
-                <!-- table columns ends  -->
-
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
