--- a/src/app/usit/components/global-search/global-search.component.html
+++ b/src/app/usit/components/global-search/global-search.component.html
@@ -120,7 +120,7 @@
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <span class="count"
-                                        (click)="vendorCategoryPopup(element.category_skill,element.posted_on, 'vendor')">
+                                        (click)="vendorCategoryPopup(element.job_title,element.posted_on, 'vendor')">
                                         {{element.vendorcount}}
                                     </span>
                                 </td>
