--- a/src/app/usit/components/accounts&billing/purchase-order-list/purchase-order-list.component.html
+++ b/src/app/usit/components/accounts&billing/purchase-order-list/purchase-order-list.component.html
@@ -56,10 +56,10 @@
                 </ng-container>
 
                 <!-- Client Column -->
-                <ng-container matColumnDef="Implpartner">
+                <!-- <ng-container matColumnDef="Implpartner">
                     <th mat-header-cell *matHeaderCellDef>Impl Partner</th>
                     <td mat-cell *matCellDef="let element"> {{element.implpartner}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Project Start Date Column -->
                 <ng-container matColumnDef="ProjectStartDate">
@@ -76,10 +76,10 @@
                 </ng-container>
 
                 <!-- Duration Column -->
-                <ng-container matColumnDef="Duration">
+                <!-- <ng-container matColumnDef="Duration">
                     <th mat-header-cell *matHeaderCellDef>Duration</th>
                     <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Billing Cycle Column -->
                 <ng-container matColumnDef="BillingCycle">
@@ -108,25 +108,25 @@
                 </ng-container>
 
                 <!-- Recruiter Name Column -->
-                <ng-container matColumnDef="RecruiterName">
+                <!-- <ng-container matColumnDef="RecruiterName">
                     <th mat-header-cell *matHeaderCellDef>Recruiter
                         Name</th>
                     <td mat-cell *matCellDef="let element"> {{element.recname}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Recruiter Email Column -->
-                <ng-container matColumnDef="RecruiterEmail">
+                <!-- <ng-container matColumnDef="RecruiterEmail">
                     <th mat-header-cell *matHeaderCellDef>Recruiter
                         Email</th>
                     <td mat-cell *matCellDef="let element"> {{element.recemail}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Recruiter Contact Number Column -->
-                <ng-container matColumnDef="RecruiterContactNumber">
+                <!-- <ng-container matColumnDef="RecruiterContactNumber">
                     <th mat-header-cell *matHeaderCellDef>
                         Recruiter Contact Number</th>
                     <td mat-cell *matCellDef="let element"> {{element.recnumber}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Account Person Name Column -->
                 <ng-container matColumnDef="AccountPersonName">
@@ -141,8 +141,6 @@
                         R Person Email</th>
                     <td mat-cell *matCellDef="let element"> {{element.acrmail}} </td>
                 </ng-container>
-
-
 
                 <!-- Account Person Contact Number Column -->
                 <ng-container matColumnDef="AccountPersonContactNumber">
