--- a/src/app/usit/components/accounts&billing/invoice-list/add-invoice/add-invoice.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/add-invoice/add-invoice.component.html
@@ -19,10 +19,10 @@
                     <mat-error *ngIf="invoiceForm.get('potype')!.hasError('required')"> PO Type is
                         required</mat-error>
                 </mat-form-field>
-<!--(selectionChange)="onVendorSelect($event)"-->
+                <!--(selectionChange)="onVendorSelect($event)"-->
                 <mat-form-field appearance="fill">
                     <mat-label>Select Vendor</mat-label>
-                    <mat-select formControlName="vendor" >
+                    <mat-select formControlName="vendor">
                         <mat-option *ngFor="let obj of vendordata" [value]="obj[0]">
                             {{ obj[1] }}
                         </mat-option>
@@ -41,10 +41,9 @@
                         required</mat-error>
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label>Tax</mat-label>
-                    <input matInput formControlName="tax" (change)="calculateInvoice()">
+                    <mat-label>Additional Charges</mat-label>
+                    <input matInput formControlName="additionalcharges" (change)="calculateInvoice()">
                 </mat-form-field>
-
             </div>
 
             <div class="form-column-right">
@@ -69,11 +68,9 @@
                     <mat-error *ngIf="invoiceForm.get('company')!.hasError('required')"> Company is
                         required</mat-error>
                 </mat-form-field> -->
-
-
                 <mat-form-field appearance="fill">
                     <mat-label>Select Net Term</mat-label>
-                    <mat-select formControlName="netterm">
+                    <mat-select formControlName="netterm" (selectionChange)="onNettermChange($event)">
                         <mat-option *ngFor="let option of selectOptionObj.netterm" [value]="option">
                             {{ option }}
                         </mat-option>
@@ -81,17 +78,22 @@
                     <mat-error *ngIf="invoiceForm.get('netterm')!.hasError('required')"> Net Term is
                         required</mat-error>
                 </mat-form-field>
+
                 <mat-form-field>
+                    <mat-label>Expense For</mat-label>
+                    <input matInput formControlName="expensesfor">
+                    <mat-error *ngIf="invoiceForm.get('expensesfor')!.hasError('required')"> Hourly Rate is
+                        required</mat-error>
+                </mat-form-field>
+                <!-- <mat-form-field>
                     <mat-label>No Of Hours</mat-label>
                     <input matInput formControlName="numberofhours" (change)="calculateInvoice()">
                     <mat-error *ngIf="invoiceForm.get('numberofhours')!.hasError('required')"> Hourly Rate is
                         required</mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
                 <mat-form-field>
-                    <mat-label>Invoice Value</mat-label>
-                    <input matInput formControlName="invoicevalue">
-                    <mat-error *ngIf="invoiceForm.get('invoicevalue')!.hasError('required')"> Invoice Value is
-                        required</mat-error>
+                    <mat-label>Tax</mat-label>
+                    <input matInput formControlName="tax" (change)="calculateInvoice()">
                 </mat-form-field>
             </div>
             <div class="form-column-left11 ">
@@ -114,17 +116,19 @@
                     <mat-error *ngIf="invoiceForm.get('invoicedate')!.hasError('required')"> Invoice Date is
                         required</mat-error>
                 </mat-form-field>
+
                 <mat-form-field>
-                    <mat-label>Hourly Rate</mat-label>
-                    <input matInput formControlName="hourlyrate" (change)="calculateInvoice()">
-                    <mat-error *ngIf="invoiceForm.get('hourlyrate')!.hasError('required')"> Hourly Rate is
+                    <mat-label>No Of Hours</mat-label>
+                    <input matInput formControlName="numberofhours" (change)="calculateInvoice()">
+                    <mat-error *ngIf="invoiceForm.get('numberofhours')!.hasError('required')"> No Of Hours is
                         required</mat-error>
                 </mat-form-field>
 
                 <mat-form-field>
-                    <mat-label>Remarks</mat-label>
-                    <input matInput formControlName="remarks">
-                    <mat-error *ngIf="invoiceForm.get('remarks')!.hasError('required')"> Remarks is required</mat-error>
+                    <mat-label>Invoice Value</mat-label>
+                    <input matInput formControlName="invoicevalue">
+                    <mat-error *ngIf="invoiceForm.get('invoicevalue')!.hasError('required')"> Invoice Value is
+                        required</mat-error>
                 </mat-form-field>
             </div>
 
@@ -146,9 +150,17 @@
                 </mat-form-field>
 
                 <mat-form-field>
-                    <mat-label>Additional Charges</mat-label>
-                    <input matInput formControlName="additionalcharges" (change)="calculateInvoice()">
+                    <mat-label>Hourly Rate</mat-label>
+                    <input matInput formControlName="hourlyrate" (change)="calculateInvoice()">
+                    <mat-error *ngIf="invoiceForm.get('hourlyrate')!.hasError('required')"> Hourly Rate is
+                        required</mat-error>
                 </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Remarks</mat-label>
+                    <input matInput formControlName="remarks">
+                    <mat-error *ngIf="invoiceForm.get('remarks')!.hasError('required')"> Remarks is required</mat-error>
+                </mat-form-field>
+
                 <mat-form-field class="upload">
                     <mat-label for="otherDocumentsUploadFile">Multiple Documents</mat-label>
                     <div class="upload-container">
@@ -163,7 +175,6 @@
                             style="display: none;" />
                     </div>
                 </mat-form-field>
-
             </div>
         </div>
     </form>
