--- a/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
@@ -5,7 +5,7 @@
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Invoice
+            Invoice 
         </span>
 
         <div class="purchase-order-actions">
@@ -42,15 +42,16 @@
                     <td mat-cell *matCellDef="let element"> {{element.invoicedate}} </td>
                 </ng-container>
 
-
-
                 <!-- Due Date Column -->
                 <ng-container matColumnDef="DueDate">
                     <th mat-header-cell *matHeaderCellDef>Due Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.duedate}} </td>
                 </ng-container>
 
-
+                <ng-container matColumnDef="company">
+                    <th mat-header-cell *matHeaderCellDef>Vendor</th>
+                    <td mat-cell *matCellDef="let element"> {{element.vendorname}} </td>
+                </ng-container>
 
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
@@ -95,6 +96,11 @@
                         <button mat-icon-button (click)="editInvoice(element)" class="action-button-ed">
                             <mat-icon>edit</mat-icon>
                         </button>
+
+                        <button mat-icon-button (click)="download(element)" class="action-button-ed">
+                            <mat-icon>download</mat-icon>
+                        </button> 
+
                         <button mat-icon-button (click)="deleteInvoice(element)" class="action-button-ed">
                             <mat-icon>delete</mat-icon>
                         </button>
