--- a/src/app/usit/components/global-search/global-search.component.html
+++ b/src/app/usit/components/global-search/global-search.component.html
@@ -27,7 +27,10 @@
         </div>
         <div>
             <button *ngIf="filteredVendorList.length>0" mat-raised-button class="excel-button"
-                (click)="popUpImport()">Excel</button>
+                (click)="reset()">Back</button>
+
+                <button *ngIf="filteredVendorList.length>0" mat-raised-button class="excel-button"
+                    (click)="popUpImport()">Excel</button>
         </div>
         <!-- style="    margin-top: 1.5rem; cursor: pointer;" -->
         <div>
@@ -102,7 +105,7 @@
                                     sortActionDescription="Sort by Date">
                                     Posted On
                                 </th>
-                                <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+                                <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on | date:'MM-dd-yyyy'}} </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Category">
@@ -163,7 +166,7 @@
                                     sortActionDescription="Sort by Date">
                                     Posted On
                                 </th>
-                                <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+                                <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on | date:'MM-dd-yyyy'}} </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Vendor">
