--- a/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
@@ -101,6 +101,10 @@
                             <mat-icon>download</mat-icon>
                         </button> 
 
+                        <button mat-icon-button (click)="sendEmail(element)" class="action-button-ed">
+                            <mat-icon>email</mat-icon>
+                        </button>
+
                         <button mat-icon-button (click)="deleteInvoice(element)" class="action-button-ed">
                             <mat-icon>delete</mat-icon>
                         </button>
