--- a/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
+++ b/src/app/usit/components/accounts&billing/invoice-list/invoice-list.component.html
@@ -13,6 +13,10 @@
                 (click)="addInvoice()">
                 <mat-icon class="item-icon">add_circle</mat-icon>
             </button>
+
+            <button mat-icon-button (click)="sendEmail(2)" class="action-button-ed">
+                <mat-icon>email</mat-icon>
+            </button>
             <!-- 
             <div class="search-submission">
                 <input matInput type="text" class="search" placeholder="search purchase order">
