--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -292,12 +292,6 @@
                   target="_blank">{{element?.job_title}}</a> </td>
             </ng-container>
 
-            <!-- Category Column -->
-            <ng-container matColumnDef="Category">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
-              </th>
-              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
-            </ng-container>
 
             <!-- Job Location Column -->
             <ng-container matColumnDef="JobLocation">
@@ -315,11 +309,11 @@
             </ng-container>
 
             <!-- Owner Column -->
-            <ng-container matColumnDef="TaggedDate">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged
+            <ng-container matColumnDef="TaggedaDate">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedaaDate"> Tagged
                 Date
               </th>
-              <td mat-cell *matCellDef="let element" nowrap> {{element.createddate | date:'MM-dd-yyyy' }} </td>
+              <td mat-cell *matCellDef="let element" nowrap> {{element.taggedadate | date:'MM-dd-yyyy' }} </td>
             </ng-container>
 
             <!-- Track Column -->
@@ -327,6 +321,12 @@
               <th mat-header-cell *matHeaderCellDef> TaggedBy </th>
               <td mat-cell *matCellDef="let element"> {{ element.pseudoname }} </td>
             </ng-container>
+
+            <ng-container matColumnDef="taggedcount">
+              <th mat-header-cell *matHeaderCellDef> Tagged Count </th>
+              <td mat-cell *matCellDef="let element"> {{ element.taggedcount }} </td>
+            </ng-container>
+
 
             <tr mat-header-row *matHeaderRowDef="dataTableColumnsDice; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: dataTableColumnsDice;"></tr>
@@ -465,7 +465,8 @@
     <div class="analysis-left-div">
       <div class="table-container table-wrapper">
         <div class="header-container-analysis">
-          <span class="header-text">Category Analysis</span>          <div class="vendor-actions">
+          <span class="header-text">Category Analysis</span>
+          <div class="vendor-actions">
             <div class="search-vendor">
               <input matInput type="text" class="search" placeholder="search category"
                 (keyup)="onCategoryFilter($event)">
@@ -567,18 +568,50 @@
       </div>
     </div>
   </div>
-
+<form [formGroup]="myForm">
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources" style="padding-right: 6px;">
       <span class="header-text">Daily Requirements Tags</span>
+   
+       <mat-form-field style=" margin-top:1rem;width:10rem;background-color: #eae9e9;font-size: 0px;  ">
+        <mat-label>Start Date</mat-label>
+        <input matInput [matDatepicker]="picker1" formControlName="startDate" />
 
-      <div class="vendor-actions">
+       <!-- <mat-hint>MM/DD/YYYY</mat-hint>-->
+      <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+        
+      </mat-form-field>
+
+      <mat-form-field style="margin-top:1rem;width:10rem;background-color:  #eae9e9;">
+        <mat-label>End Date</mat-label>
+        <input matInput [matDatepicker]="picker2" formControlName="endDate" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2 color="primary"></mat-datepicker>
+      </mat-form-field> 
+     
+      <mat-form-field style="margin-top:0.95rem;margin-right:10rem;width:12rem;background-color: #e2dede;">
+        <mat-label>EmployeeName</mat-label>
+        <mat-select formControlName="benchSalesEmployees" (selectionChange)="onEmployeeChange($event)">
+          <mat-option *ngFor="let option of benchSalesEmployees" [value]="option[0]">{{ option[1] }}</mat-option>
+        </mat-select>
+        <mat-error *ngIf="hasError(startDate.errors) && hasError(endDate.errors) && myForm.get('benchSalesEmployees').touched">
+          Please select Start Date and End Date before selecting an Employee.
+        </mat-error>
+        
+      
+      </mat-form-field>
+      <div class="btn">
+      <button mat-raised-button color="primary" style="width:2rem;" (click)="refreshData()">Refresh</button>
+    </div>
+      <!-- </form> -->
+       <div class="vendor-actions">
         <div class="search-vendor">
-          <input matInput type="text" class="search dice" placeholder="search ..." (keyup)="onDiceFilter($event)" >
+          <input matInput type="text" class="search dice" placeholder="search ..." (keyup)="onDiceFilter($event)">
         </div>
       </div>
-
-    </div>
+   </div>
     <hr>
     <section class="table-style-dice mat-elevation-z8" style="height: 630px; overflow-Y: scroll;">
       <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
@@ -622,13 +655,20 @@
         <ng-container matColumnDef="TaggedDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged Date
           </th>
-          <td mat-cell *matCellDef="let element" nowrap> {{element.createddate | date:'MM-dd-yyyy' }} </td>
+          <td mat-cell *matCellDef="let element" nowrap> {{element.taggedadate | date:'MM-dd-yyyy' }} </td>
         </ng-container>
 
         <!-- Track Column -->
         <ng-container matColumnDef="TaggedBy">
           <th mat-header-cell *matHeaderCellDef> TaggedBy </th>
           <td mat-cell *matCellDef="let element"> {{ element.pseudoname }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="TaggedCount">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedCount"> Tagged
+            Count
+          </th>
+          <td mat-cell *matCellDef="let element" nowrap> {{element.taggedcount }} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="dataTableColumnsDice; sticky: true"></tr>
@@ -640,6 +680,8 @@
 
 
   </div>
+  
+</form>
 </div>
 
 <br>
