--- a/src/app/usit/components/sales/hot-list/hot-list.component.scss
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.scss
@@ -195,3 +195,16 @@
     color: black;
     pointer-events: none;
   }
+
+  //lavanya
+.form-container {
+  margin-right: 7rem;
+  /* Adjust as needed */
+  margin-top: 1rem;
+  width: 10rem;
+
+}
+
+.bold-label {
+  font-weight: bold;
+}
