--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -16,13 +16,13 @@
                     <mat-option value="dice">Dice</mat-option>
                     <mat-option value="indeed">Indeed</mat-option>
                     <mat-option value="jobcube">Job Cube</mat-option>
-                    <mat-option value="joblift">Job Lift</mat-option>
+                    <!-- <mat-option value="joblift">Job Lift</mat-option> -->
                     <mat-option value="juju">Juju</mat-option>
                     <mat-option value="linkedin">LinkedIn</mat-option>
                     <mat-option value="post job free">Post Job Free</mat-option>
                     <mat-option value="recruit.net">Recruit</mat-option>
                     <mat-option value="Simplyhired">Simply Hired</mat-option>
-                    <mat-option value="snaprecruit">Snaprecruit</mat-option>
+                    <!-- <mat-option value="snaprecruit">Snaprecruit</mat-option> -->
                 </mat-select>
             </mat-form-field>
         </div>
@@ -52,7 +52,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
                         style="width: 7%">Posted On</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 7%"> {{element?.posted_on |
-                        date:'MM-dd-yyyy'}} </td>
+                        date:'MM-dd-yyyy HH:mm'  }} </td>
                 </ng-container>
 
 
