--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <mat-card class="login-card">
       <div class="logo">
-          <img src="assets/images/singular-logo.png" alt="Logo">
+          <img src="assets/images/logo.jpg" alt="Logo">
       </div>
       <mat-card-header class="header-no-padding">
           <mat-card-title>Login to Your Account</mat-card-title>
