--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 </div> -->
 <div class="overall-container">
   <div class="container">
-    <div class="left-div">
+    <div class="left-div" >
       <div class="left-div-inner-cards">
         <div class="card-1">
           <mat-card>
@@ -271,11 +271,11 @@
 
       <div class="table-container-dice table-wrapper" *ngIf="!sourcingLead">
         <div class="header-container-leading-resources">
-          <span class="header-text">Dice Requirement Tags</span>
+          <span class="header-text">Daily Requirement Tags</span>
         </div>
         <hr>
-        <section class="table-style-dice mat-elevation-z8" style="height: 490px; overflow-Y: scroll;">
-          <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
+        <section class="table-style-dice mat-elevation-z8" style="height:450px; overflow-Y: scroll;overflow-x: scroll">
+          <table mat-table [dataSource]="dataSourceDice" class="responsive-table;">
             <!-- Posted Date Column -->
             <ng-container matColumnDef="PostedDate">
               <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by PostedDate"> Posted
@@ -292,6 +292,12 @@
                   target="_blank">{{element?.job_title}}</a> </td>
             </ng-container>
 
+            <!-- Category Column -->
+            <!-- <ng-container matColumnDef="Category">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
+            </ng-container> -->
 
             <!-- Job Location Column -->
             <ng-container matColumnDef="JobLocation">
@@ -309,11 +315,11 @@
             </ng-container>
 
             <!-- Owner Column -->
-            <ng-container matColumnDef="TaggedaDate">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedaaDate"> Tagged
+            <ng-container matColumnDef="TaggedDate">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged
                 Date
               </th>
-              <td mat-cell *matCellDef="let element" nowrap> {{element.taggedadate | date:'MM-dd-yyyy' }} </td>
+              <td mat-cell *matCellDef="let element" nowrap> {{element.taggeddate | date:'MM-dd-yyyy' }} </td>
             </ng-container>
 
             <!-- Track Column -->
@@ -322,7 +328,7 @@
               <td mat-cell *matCellDef="let element"> {{ element.pseudoname }} </td>
             </ng-container>
 
-            <ng-container matColumnDef="taggedcount">
+            <ng-container matColumnDef="TCount">
               <th mat-header-cell *matHeaderCellDef> Tagged Count </th>
               <td mat-cell *matCellDef="let element"> {{ element.taggedcount }} </td>
             </ng-container>
@@ -337,7 +343,7 @@
 
 
       </div>
-
+   
     </div>
     <div class="right-div">
       <div class="sourcing-card">
@@ -460,13 +466,12 @@
       </div>
     </div>
   </div>
-<!-- 
-  <div class="analysis-container">
+
+  <!-- <div class="analysis-container">
     <div class="analysis-left-div">
       <div class="table-container table-wrapper">
         <div class="header-container-analysis">
-          <span class="header-text">Category Analysis</span>
-          <div class="vendor-actions">
+          <span class="header-text">Category Analysis</span>          <div class="vendor-actions">
             <div class="search-vendor">
               <input matInput type="text" class="search" placeholder="search category"
                 (keyup)="onCategoryFilter($event)">
@@ -485,13 +490,13 @@
             <ng-container matColumnDef="Date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Posted On
               </th>
-              <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_on}} </td>
+              <td mat-cell *matCellDef="let element" nowrap> {{element?.posted_date}} </td>
             </ng-container>
 
             <ng-container matColumnDef="Category">
               <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
               </th>
-              <td mat-cell *matCellDef="let element"> {{element.job_title}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.category_skill}} </td>
             </ng-container>
 
             <ng-container matColumnDef="VendorCount">
@@ -499,7 +504,7 @@
                 Count
               </th>
               <td mat-cell *matCellDef="let element">
-                <span class="count" (click)="vendorCategoryPopup(element.job_title,element.posted_on, 'vendor')">
+                <span class="count" (click)="vendorCategoryPopup(element.category_skill,element.posted_date, 'vendor')">
                   {{element.vendorcount}}
                 </span>
               </td>
@@ -567,14 +572,14 @@
         </section>
       </div>
     </div>
-  </div>
--->
-<form [formGroup]="myForm">
+  </div>  -->
+
+<form [formGroup]="myForm" >
   <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;" *ngIf="sourcingLead">
     <div class="header-container-leading-resources" style="padding-right: 6px;">
       <span class="header-text">Daily Requirements Tags</span>
-   
-       <mat-form-field style=" margin-top:1rem;width:10rem;background-color: #eae9e9;font-size: 0px;  ">
+
+<mat-form-field style=" margin-top:1rem;width:10rem;background-color: #eae9e9;font-size: 0px;  ">
         <mat-label>Start Date</mat-label>
         <input matInput [matDatepicker]="picker1" formControlName="startDate" />
 
@@ -604,12 +609,13 @@
       <button mat-raised-button color="primary" style="width:2rem;" (click)="refreshData()">Refresh</button>
     </div>
       <!-- </form> -->
-       <div class="vendor-actions">
+      <div class="vendor-actions">
         <div class="search-vendor">
-          <input matInput type="text" class="search dice" placeholder="search ..." (keyup)="onDiceFilter($event)">
+          <input matInput type="text" class="search dice" placeholder="search ..." (keyup)="onDiceFilter($event)" >
         </div>
       </div>
-   </div>
+
+    </div>
     <hr>
     <section class="table-style-dice mat-elevation-z8" style="height: 630px; overflow-Y: scroll;">
       <table mat-table [dataSource]="dataSourceDice" class="responsive-table">
@@ -653,21 +659,21 @@
         <ng-container matColumnDef="TaggedDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedDate"> Tagged Date
           </th>
-          <td mat-cell *matCellDef="let element" nowrap> {{element.taggedadate | date:'MM-dd-yyyy' }} </td>
+          <td mat-cell *matCellDef="let element" nowrap> {{element.taggeddate | date:'MM-dd-yyyy' }} </td>
         </ng-container>
 
         <!-- Track Column -->
-        <ng-container matColumnDef="TaggedBy">
-          <th mat-header-cell *matHeaderCellDef> TaggedBy </th>
+        <ng-container matColumnDef="TaggedBy" >
+          <th mat-header-cell *matHeaderCellDef> Tagged By </th>
           <td mat-cell *matCellDef="let element"> {{ element.pseudoname }} </td>
         </ng-container>
 
-        <ng-container matColumnDef="TaggedCount">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by TaggedCount"> Tagged
-            Count
-          </th>
-          <td mat-cell *matCellDef="let element" nowrap> {{element.taggedcount }} </td>
+        <ng-container matColumnDef="TCount">
+          <th mat-header-cell *matHeaderCellDef> Tagged Count </th>
+          <td mat-cell *matCellDef="let element"> {{ element.taggedcount }} </td>
         </ng-container>
+
+    
 
         <tr mat-header-row *matHeaderRowDef="dataTableColumnsDice; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: dataTableColumnsDice;"></tr>
@@ -678,7 +684,7 @@
 
 
   </div>
-  
+
 </form>
 </div>
 
