open requirements pop up changes

--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -211,4 +211,9 @@ ul.breadcrumb li:last-child {
     padding-top: 20px !important;
     padding-bottom: 8px;
   }
+  .req-info {
+    cursor: pointer;
+    color: #4154f1;
+    text-decoration: none;
+  }
 }
