--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -91,8 +91,8 @@
                 <ng-container matColumnDef="vendor">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate">
                         Vendor</th>
-                    <td mat-cell *matCellDef="let element"> {{element?.vendor}}
-                    </td>
+                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 5%"> {{element?.vendor}}
+                        </td>
                 </ng-container>
 
                 <!-- Source Column-->
