--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -1,11 +1,11 @@
 <div class="hot-list-container">
     <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">Daily Requirements</li>
+        <li class="last">Portal Requirements</li>
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Daily Requirements
+            Portal Requirements
         </span>
         <div>
             <mat-form-field class="portal-form-field">
