--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -28,38 +28,60 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef>
+                    <th mat-header-cell *matHeaderCellDef style=" width: 1% " >
                         S.No </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+                    <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
                 </ng-container>
                 <!-- Name Column-->
 
                 <ng-container matColumnDef="Subject">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject" style=" width: 30% !important;" >
                         Subject</th>
-                    <td mat-cell *matCellDef="let element" nowrap>{{element?.subject}} </td>
+                    <td mat-cell *matCellDef="let element" style=" width: 30% !important;" >{{element?.subject}} </td>
                 </ng-container>
                 <!-- Sender Column-->
                 <ng-container matColumnDef="Sender">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Sender">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Sender"   style=" width: 5% ">
                         Sender </th>
-                    <td mat-cell *matCellDef="let element"><span class="consultant-name">{{element?.sender}}
+                    <td mat-cell *matCellDef="let element"  style=" width: 5% "><span class="consultant-name">{{element?.sender}}
                         </span> </td>
                 </ng-container>
                 <!-- Date Column-->
                 <ng-container matColumnDef="Date">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date" style=" width: 10% !important;"
                         nowrap>
                         Date </th>
-                    <td mat-cell *matCellDef="let element">
+                    <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
                         {{element?.sentdate}}</td>
                 </ng-container>
                 <!-- Body Column-->
                 <ng-container matColumnDef="Body">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Body"> Body </th>
-                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)">VIEW </td>
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Body" style=" width: 3% "> Body </th>
+                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)"  style=" width: 3% ">VIEW </td>
                 </ng-container>
-
+              <!-- <ng-container matColumnDef="Action">
+                    <th mat-header-cell *matHeaderCellDef  style=" width: 3% "> Action </th>
+                    <td mat-cell *matCellDef="let emp" class="action-buttons"  style=" width: 3% ">
+                      <span class="action-btns">
+                      <button  mat-icon-button (click)="deleteItem(emp)"class="action-button-ed">
+                          <mat-icon >delete</mat-icon>
+                        </button>
+                      </span>
+                    </td>
+                  </ng-container>-->
+                  <ng-container matColumnDef="Action">
+                    <th mat-header-cell *matHeaderCellDef style="width: 5%"> Action </th>
+                    <td mat-cell *matCellDef="let element" style="width: 5%">
+                      <span class="action-buttons">
+                        <button [disabled]="!privilegeServ.hasPrivilege('DELETE_VENDOR')" mat-icon-button
+                          (click)="delete(element)" class="action-button-ed">
+                          <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_VENDOR')}">delete</mat-icon>
+                        </button>
+                      </span>
+                    </td>
+                  </ng-container>
+                  
+                
                 <!-- table ROW  experience_summary -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
